--- a/package.json
+++ b/package.json
@@ -6,12 +6,19 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.2.1",
+    "apollo-boost": "^0.4.7",
     "face-api.js": "^0.22.0",
+    "graphql": "^14.6.0",
+    "graphql-tag": "^2.10.1",
+    "lodash": "^4.17.15",
     "react": "^16.12.0",
+    "react-apollo": "^3.1.3",
     "react-bulma-components": "^3.1.3",
     "react-dom": "^16.12.0",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.1",
-    "react-webcam": "^5.0.0"
+    "react-webcam": "^5.0.0",
+    "sweetalert2": "^9.7.1"
   },
   "scripts": {
     "start": "react-scripts start",
