--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-apollo": "^3.1.3",
     "react-bulma-components": "^3.1.3",
     "react-dom": "^16.12.0",
+    "react-hook-form": "^4.8.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.1",
     "react-webcam": "^5.0.0",
