--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "face-api.js": "^0.22.0",
     "graphql": "^14.6.0",
     "graphql-tag": "^2.10.1",
+    "howler": "^2.1.3",
     "lodash": "^4.17.15",
     "react": "^16.12.0",
     "react-apollo": "^3.1.3",
     "react-bulma-components": "^3.1.3",
+    "react-device-detect": "^1.11.14",
     "react-dom": "^16.12.0",
     "react-hook-form": "^4.8.2",
     "react-router-dom": "^5.1.2",
