--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "graphql": "^14.6.0",
     "graphql-tag": "^2.10.1",
     "howler": "^2.1.3",
+    "jimp": "^0.9.3",
     "lodash": "^4.17.15",
     "react": "^16.12.0",
     "react-apollo": "^3.1.3",
