--- a/package.json
+++ b/package.json
@@ -27,9 +27,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "orig_build": "react-scripts build",
-    "build": "serve -s build",
-    
+    "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
