--- a/package.json
+++ b/package.json
@@ -26,8 +26,8 @@
     "sweetalert2": "^9.7.1"
   },
   "scripts": {
-    "start": "npm run buildt",
-    "start_default": "react-scripts start",
+    "start": "serve -s build",
+    "start_orig": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
